--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mit.lawyered.SignIn">
+    tools:context="com.mit.lawyered.View.Activity.SignIn">
 
     <TextView
         android:layout_width="wrap_content"
