--- a/app/src/main/res/menu/bottom_nav_items.xml
+++ b/app/src/main/res/menu/bottom_nav_items.xml
@@ -6,8 +6,7 @@
         />
     <item
         android:id="@+id/menu_search"
-        android:title="@string/menu_alerts"
-        />
+        android:title="@string/menu_alerts" />
 
     <item
         android:id="@+id/menu_notifications"
