--- a/app/src/main/res/layout/laws_row.xml
+++ b/app/src/main/res/layout/laws_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" 
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvLawTitle"
             android:text="Title"
@@ -25,15 +25,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="end">
 
             <Button
+                android:id="@+id/btnMark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnMark"
-                android:text="Mark as Broken"
-                android:layout_marginLeft="500dp"
-                android:layout_marginTop="50dp"/>
+
+                android:layout_marginTop="50dp"
+                android:elevation="0dp"
+                android:text="Mark as Broken" />
 
             <Button
                 android:layout_width="wrap_content"
