--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/password"
         android:hint="Password"
+        android:inputType="textPassword"
         android:layout_gravity="center"/>
 
     <Button
