--- a/app/src/main/res/layout/profiles_row.xml
+++ b/app/src/main/res/layout/profiles_row.xml
@@ -12,11 +12,11 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
@@ -25,13 +25,17 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/tvProfName"
                     android:text="Name"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"></LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvProfRate"
-                    android:layout_gravity="end"
-                    android:layout_marginLeft="600dp"
+                    android:gravity="right"
+
                     android:text="5/10"/>
 
             </LinearLayout>
@@ -47,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btnViewFull"
                 android:text="View Full Profile"
-                android:layout_marginLeft="600dp"/>
+                android:layout_gravity="end"/>
 
         </LinearLayout>
 
