--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -9,8 +9,8 @@
     tools:context="com.mit.law.view.activity.SignIn">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
         app:srcCompat="@drawable/lawyered" />
@@ -20,9 +20,14 @@
         android:layout_height="wrap_content"
         android:text="Lawyered"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="80sp"
+        android:textSize="60sp"
         android:layout_gravity="center"
        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +44,6 @@
                 android:textSize="30sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="200dp"
                 android:layout_gravity="center"/>
 
             <EditText
