HOme.java - removed toolbar sign in - last edit home - renovated (search panel is temporarily invisible)

--- a/app/src/main/res/menu/bottom_nav_items.xml
+++ b/app/src/main/res/menu/bottom_nav_items.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_laws"
-        android:icon="@drawable/common_google_signin_btn_icon_dark"
+        android:icon="@drawable/gavel"
         android:title="@string/menu_law"
         />
     <item
         android:id="@+id/menu_alerts"
-        android:icon="@drawable/common_google_signin_btn_icon_dark"
+        android:icon="@drawable/notifications"
         android:title="@string/menu_alerts" />
 
     <item
         android:id="@+id/menu_profiles"
-        android:icon="@drawable/common_google_signin_btn_icon_dark"
+        android:icon="@drawable/people"
         android:title="@string/menu_profiles" />
 </menu>
 
