--- a/app/src/main/res/layout/laws_row.xml
+++ b/app/src/main/res/layout/laws_row.xml
@@ -6,13 +6,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvLawTitle"
             android:text="Title"
+            android:textSize="40sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             android:padding="10dp"/>
 
         <TextView
@@ -20,6 +24,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvShortDescr"
             android:text="Short Description"
+            android:textSize="25sp"
             android:padding="10dp"/>
 
         <LinearLayout
@@ -32,15 +37,24 @@
                 android:id="@+id/btnMark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:layout_marginTop="50dp"
-                android:elevation="0dp"
+                android:background="@color/colorAccent"
+                android:textColor="@color/colorPrimaryDark"
+                android:padding="20dp"
+                android:textSize="25sp"
+                android:textAllCaps="false"
+                android:layout_marginRight="20dp"
                 android:text="Mark as Broken" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnView"
+                android:background="@color/colorAccent"
+                android:textColor="@color/colorPrimaryDark"
+                android:padding="20dp"
+                android:textSize="25sp"
+                android:textAllCaps="false"
                 android:text="View More"
                 android:layout_marginTop="50dp"/>
 
