--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -7,8 +7,16 @@
     android:layout_height="match_parent">
 
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/mainToolbar"
+        android:background="@color/colorPrimaryDark"
+        android:elevation="6dp">
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
+        android:layout_marginTop="60dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
