Both single rows are refined

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FFC400</color>
+    <color name="colorAccent">#ffc400</color>
     <color name="colorOptional">#D1A100</color>
 </resources>
