--- a/app/src/main/res/layout/notifications_row.xml
+++ b/app/src/main/res/layout/notifications_row.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        
+        android:orientation="horizontal"
+        android:layout_margin="3dp">
+
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
             android:id="@+id/imgNotIcon"
-            android:layout_gravity="left"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            app:srcCompat="@drawable/notifications" />
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="2dp">
             
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:id="@+id/tvNotTitle"
                 android:text="Notification Title"
-                android:paddingTop="8dp"
-                android:paddingLeft="20dp"/>
+                android:textSize="12sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:paddingTop="4dp"
+                android:paddingLeft="10dp"/>
             
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvNotDescription"
                 android:text="Description"
-                android:paddingTop="10dp"
-                android:paddingLeft="20dp"/>
+                android:textSize="10sp"
+                android:paddingTop="4dp"
+                android:paddingLeft="10dp"/>
             
         </LinearLayout>
     </LinearLayout>
