--- a/app/src/main/res/layout/profiles_row.xml
+++ b/app/src/main/res/layout/profiles_row.xml
@@ -13,7 +13,8 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_margin="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -23,8 +24,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"
                     android:id="@+id/tvProfName"
                     android:text="Name"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_weight="1"
@@ -34,8 +39,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvProfRate"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
                     android:gravity="right"
-
                     android:text="5/10"/>
 
             </LinearLayout>
@@ -44,14 +50,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvProfShort"
+                android:layout_marginTop="5dp"
+                android:textSize="13sp"
                 android:text="Short Description" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="25dp"></LinearLayout>
+
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/btnViewFull"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="end"
+                android:padding="5dp"
+                android:background="@color/colorAccent"
                 android:text="View Full Profile"
-                android:layout_gravity="end"/>
+                android:textAllCaps="false"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
