--- a/app/src/main/res/layout/fragment_profiles.xml
+++ b/app/src/main/res/layout/fragment_profiles.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rv_profiles"
+        android:layout_marginTop="60dp"
         android:scrollbars="vertical">
     </android.support.v7.widget.RecyclerView>
 
