--- a/app/src/main/res/layout/law_in_full.xml
+++ b/app/src/main/res/layout/law_in_full.xml
@@ -2,48 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="10dp">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvTitleLaw"
-            android:text="Title"/>
-
-
-
-    </LinearLayout>
+        android:id="@+id/tvTitleLaw"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="Title"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvLawInShort"
+        android:textSize="14sp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimaryDark"
         android:text="Short Description" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingRight="50dp"
         android:layout_gravity="right">
 
         <Button
+            android:id="@+id/btnMarkBroken"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnMarkBroken"
-            android:text="Mark as Broken" />
+            android:backgroundTint="#FFC400"
+            android:textColor="@color/colorPrimary"
+            android:text="Mark as Broken"
+            android:textAllCaps="false"
+            android:textSize="15sp" />
 
         <Button
+            android:id="@+id/btnViewMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnViewMore"
-            android:text="View More"/>
+            android:backgroundTint="#FFC400"
+            android:textColor="@color/colorPrimary"
+            android:text="View More"
+            android:textAllCaps="false"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
@@ -51,12 +62,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvQuote"
-        android:text="Quote"/>
+        android:textSize="15sp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="'Quote'"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+    </LinearLayout>
 
     <WebView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/wvFullLaw">
+        android:id="@+id/wvFullLaw"
+        android:layout_marginTop="10dp"
+        android:visibility="gone">
 
     </WebView>
 
