--- a/app/src/main/res/layout/profile_in_full.xml
+++ b/app/src/main/res/layout/profile_in_full.xml
@@ -9,20 +9,32 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvName"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:layout_weight="1"
             android:padding="10dp"
             android:text="Name"/>
+
+        <LinearLayout
+            android:layout_width="220dp"
+            android:layout_height="35dp" />
 
         <TextView
             android:id="@+id/tvRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_weight="2"
             android:text="5/10"
             android:padding="10dp"
             tools:layout_gravity="right" />
@@ -43,6 +55,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvLawyerShortDescr"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimaryDark"
         android:padding="10dp"
         android:text="Short Description" />
 
@@ -59,12 +73,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnContact"
             android:padding="10dp"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:backgroundTint="@color/colorAccent"
             android:text="Contact" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnRate"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:backgroundTint="@color/colorAccent"
             android:padding="10dp"
             android:text="Rate"/>
 
@@ -80,17 +100,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Contact Details" />
+            android:text="Contact Details"
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mobile: "
+                    android:textSize="15sp"
+                    android:textColor="@color/colorPrimaryDark"
                     android:padding="10dp"
                     android:layout_gravity="left"/>
 
@@ -98,6 +123,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvMobile"
+                    android:textSize="15sp"
+                    android:textColor="@color/colorPrimaryDark"
                     android:padding="10dp"
                     android:text="Mobile"/>
 
@@ -106,12 +133,15 @@
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                android:layout_marginLeft="10dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Office: "
+                        android:textSize="15sp"
+                        android:textColor="@color/colorPrimaryDark"
                         android:padding="10dp"
                         android:layout_gravity="left"/>
 
@@ -119,6 +149,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tvOffice"
+                        android:textSize="15sp"
+                        android:textColor="@color/colorPrimaryDark"
                         android:padding="10dp"
                         android:text="Office"/>
 
