--- a/app/src/main/res/layout/rate_lawyer.xml
+++ b/app/src/main/res/layout/rate_lawyer.xml
@@ -23,21 +23,27 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right"
-        android:layout_marginRight="15dp">
+        android:layout_margin="20dp">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/btnCancel"
-            android:text="Cancel"
-            android:padding="10dp"/>
-
-        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:padding="10dp"
+            android:text="Cancel" />
+
+        <Button
             android:id="@+id/btnOk"
-            android:text="OK"
-            android:padding="10dp"/>
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:padding="10dp"
+            android:text="OK" />
 
 
     </LinearLayout>
