--- a/app/src/main/res/layout/laws_row.xml
+++ b/app/src/main/res/layout/laws_row.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" 
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_law"
+        android:elevation="50dp">
 
     
     <LinearLayout
@@ -67,5 +73,7 @@
 
         
     </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
