--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,10 @@
     <item android:id="@+id/action_logout"
         android:title="log out"
         app:showAsAction="never"/>
+    <item android:title=""
+        android:id="@+id/search_icon"
+
+        android:icon="@drawable/search"
+        app:showAsAction="always"/>
 
 </menu>
